--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "format": "npm run prettier:fix && npm run lint:fix"
   },
   "dependencies": {
-    "antd": "^5.3.3",
+    "@types/axios": "^0.14.0",
+    "@types/node": "^20.3.0",
+    "antd": "^5.6.1",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
